# islands

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Game.cpp  Game.hpp  GlobalSettings.cpp  GlobalSettings.hpp  Island.cpp  Island.hpp  IslandsGame.cpp  IslandsGame.hpp  IslandsTile.cpp  IslandsTile.hpp  IslandsUiManager.cpp  IslandsUiManager.hpp  IslandsWorld.cpp  IslandsWorld.hpp  Tile.cpp  Tile.hpp  TileType.hpp  UiManager.cpp  UiManager.hpp  UiSettings.cpp  UiSettings.hpp  World.cpp  World.hpp  main.cpp  world_001.txt  world_3x4_island2.txt  world_3x5_islands2.txt  world_3x_5_island3.txt  world_5x5_plus_sign.txt  world_charlotte.txt
src/worlds/: 2_islands_1_unique.txt  3_islands_1_unique.txt  3_islands_1_unique_complex.txt  column_mini.txt  corner_bottom_left.txt  corners_top.txt  g_shape.txt  middle_left.txt  middle_right.txt  top_middle.txt  u_shape.txt  world_000.txt  world_3x3_1island_top_left_corner.txt  world_3x4_island2.txt  world_3x5_islands2.txt  world_3x_5_island3.txt  world_charlotte.txt  world_column.txt  world_corner_bottom_left.txt  world_corner_bottom_right.txt  world_corner_top_right.txt  world_dots_2.txt  world_random.txt
